--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset='utf-8'>
     <meta name="defaultLanguage" content="ja">
-    <meta name="availableLanguages" content="ja, en">
+    <meta name="availableLanguages" content="ja,en">
     <link rel="localization" href="/lang/base.{locale}.l20n">
     <title data-l10n-id="title"></title>
     <!--[if IE]>
@@ -12,12 +12,10 @@
 <body>
     <x-hello></x-hello>
     <script src="/vendor/underscore/underscore-min.js"></script>
+    <script src="/vendor/fetch/fetch.js"></script>
     <script src="/vendor/promise-polyfill/promise.min.js"></script>
     <script src="/vendor/l20n/dist/compat/web/l20n.js"></script>
     <script src="/vendor/riot/riot+compiler.js"></script>
     <script src="/lib/tAMD.min.js"></script>
-    <script type="riot/tag" src="/tags/hello.tag"></script>
-    <script>
-      riot.mount('x-hello')
-    </script>
+    <script src="/lib/main.js"></script>
 </body>
